# mtg-art-downloader

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  app.py  build.py  cards.txt  cards2.txt  config.ini  decklist.txt  detailed.txt  downloader.py  find.py  main.py  main.spec  mypy.ini  pyproject.toml  requirements.txt  run.bat  settings.py  sheet_generated.py  tester.py  tsr.txt  txt_downloader.py
.github/workflows/: build.yml  py-test.yml
docs/: index.md
lib/: card.py  codes.hjson  codes.json  constants.py  core.py  links.json  scryfall.json  settings.py  special.json  tests.py
src/: card.py  codes.hjson  constants.py  core.py  fetch.py  links.json  settings.py  tests.py  types.py
